--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,12 @@
             <version>3.1.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.thetransactioncompany</groupId>
+            <artifactId>cors-filter</artifactId>
+            <version>2.6</version>
+        </dependency>
+
 
     </dependencies>
     <properties>
